--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -25,7 +25,7 @@ jobs:
           python-version: 3.8
 
       - name: Install Python dependencies
-        run: pip install black flake8
+        run: pip install pylint flake8
 
       - name: Run linters
         uses: wearerequired/lint-action@v2
